add rawlink documentation

--- a/cpt-details.tex
+++ b/cpt-details.tex
@@ -400,6 +400,8 @@ There are two supported attributes:
 		Shows the process id of the \cvmfs\ \fuse\ process.		
 	\item[proxy]
 		Shows the currently active HTTP proxy.
+	\item[rawlink]
+	    Shows unresolved variant symbolic links; only accessible as root.
 	\item[revision]
 		Shows the file catalog revision of the mounted root catalog, an auto-increment counter increased on every repository publish.
 	\item[root\_hash]
