document CVMFS_INITIAL_INODE parameter

--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -15,6 +15,7 @@
 		\tt CVMFS\_HOST\_RESET\_AFTER		& See \texttt{CVMFS\_PROXY\_RESET\_AFTER}.\\
 		\tt CVMFS\_HTTP\_PROXY				& Chain of HTTP proxy groups used by \cvmfs. Necessary. Set to \texttt{DIRECT} if you don't use proxies.\\
 		\tt CVMFS\_IGNORE\_SIGNATURE		& When set to ``yes'', don't verify \cvmfs\ file catalog signatures.\\
+		\tt CVMFS\_INITIAL\_GENERATION		& Initial inode generation.  Used for testing.\\
 		\tt CVMFS\_KCACHE\_TIMEOUT			& Timeout for path names and file attributes in the kernel file system buffers.\\
 		\tt CVMFS\_KEYS\_DIR				& Directory containing *.pub files used as repository signing keys.  If set, this parameter has precedence over \texttt{CVMFS\_PUBLIC\_KEY}.\\
 		\tt CVMFS\_MAX\_RETRIES			& Maximum number of retries for a given proxy/host combination.\\
