add documentation for new extended attributes

--- a/cpt-details.tex
+++ b/cpt-details.tex
@@ -378,6 +378,8 @@ There are two supported attributes:
 		Shows the remaining life time of the mounted root file catalog in minutes.
 	\item[fqrn]
 		Shows the fully qualified repository name of the mounted repository.
+	\item[inode\_max]
+		Shows the highest possible inode with the current set of loaded catalogs.		
 	\item[hash]
 		Shows the SHA-1 hash of a regular file as listed in the file catalog.
 	\item[host]
@@ -414,6 +416,8 @@ There are two supported attributes:
 		Shows the timeout for proxied connections in seconds.
 	\item[timeout\_direct]
 		Shows the timeout for direct connections in seconds.
+	\item[rawlink]
+		Shows the unresolved variant symlink.	
 	\item[uptime]
 		Shows the time passed since mounting in minutes.
 	\item[usedfd]
