--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -222,7 +222,7 @@ With nested catalogs, \cvmfs\ has a mechansim to partition the directory tree of
 Repository maintainers are responsible for sensible cutting of the directory trees into nested catalogs. 
 They can do so by creating and removing the magic file \texttt{.cvmfscatalog}.
 
-For example, in order to create a nested catalog for software relase 1.0 in the hypothetical repository experiment.cern.ch, do
+For example, in order to create a nested catalog for software release 1.0 in the hypothetical repository experiment.cern.ch, do
 \begin{verbatim}
 cvmfs_transaction
 touch /cvmfs/experiment.cern.ch/software/1.0/.cvmfscatalog
