FIX: typo and styling

--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -229,8 +229,8 @@ touch /cvmfs/experiment.cern.ch/software/1.0/.cvmfscatalog
 cvmfs_server publish
 \end{verbatim}
 
-If you want to merge a nested catalog with its parent catalog, remove the corresponing .cvmfscatalog file. 
-Nested catalogs can be nested on aritrary many levels.
+If you want to merge a nested catalog with its parent catalog, remove the corresponding \texttt{.cvmfscatalog} file. 
+Nested catalogs can be nested on arbitrary many levels.
 
 \subsection{Recommendations for Nested Catalogs}
 Nested catalogs should be created having in mind which files and directories are accessed together. 
