--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -265,3 +265,18 @@ As a rule of thumb, a single file catalog should contain more than 1000 files an
 Restructuring the repository's directory tree is an expensive operation in CernVM-FS. 
 Moreover, it can easily break clients when they switch to a restructured file system snapshot. 
 Therefore, your software directory tree layout should be relatively stable before you start filling the CernVM-FS repository.
+
+\subsection{Migrate File Catalogs}
+In rare cases the further development of \cvmfs\ makes it necessary to change the internal structure of file catalogs.
+Updating the \cvmfs\ installation on a Stratum 0 machine might require a migration of the file catalogs.
+
+It is recommended that \texttt{cvmfs\_server list} is issued after any \cvmfs\ update to review if any of the maintained repositories need a migration.
+Outdated repositories will be marked as \textbf{INCOMPATIBLE} and \texttt{cvmfs\_server} refuses all actions on these repositories until the file catalogs have been updated.
+
+In order to run a file catalog migration use \texttt{cvmfs\_server migrate} for each of the outdated repositories.
+This will essentially create a new repository revision that contains the exact same  file structure as the current revision.
+However, all file catalogs will be recreated from scratch using the updated internal structure.
+Note that historic file catalogs of all previous repository revisions stay untouched and are not migrated.
+
+After \texttt{cvmfs\_server migrate} has successfully updated all file catalogs repository maintenance can continue as usual.
+
