Section: Repository Import

--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -33,6 +33,8 @@
 \providecommand{\deprecated}[1]{#1\ \textcolor{red}{\emph{deprecated~information}}}
 \providecommand{\msgname}[1]{\emph{#1}}
 
+\newcommand{\textapprox}{\raisebox{0.5ex}{\texttildelow}}
+
 \usepackage[nottoc]{tocbibind}
 \usepackage{makeidx}
 \makeindex
