--- a/packages.tex
+++ b/packages.tex
@@ -12,6 +12,7 @@
 \usepackage{cite} % Order citations automatically (such as [1-4,5,8])
 \usepackage{array} % Extend array and tabular with column formatting
 \usepackage{hyperref}
+\usepackage{textcomp}
 \hypersetup{final,
 	        plainpages=false,
 	        pdfpagelabels,
