--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -96,6 +96,39 @@ In case of a multi-repository host, you need to specify which repository you wan
 Additionally you should run \texttt{cvmfs\_server resign} every 30 days to update the signatures of the repository.
 Most \texttt{cvmfs\_server} commands allow for wildcards to do manipulations on more than one repository at once, i.e. \texttt{cvmfs\_server migrate *.cern.ch} would migrate all present repositories ending with \texttt{.cern.ch}.
 
+\subsection{Repository Import}
+The \cvmfs\ 2.1 server tools support the import of a \cvmfs\ file storage together with its corresponding signing keychain.
+With \texttt{cvmfs\_server import} both \cvmfs\ 2.0 and 2.1 compliant repository file storages can be imported.
+
+\texttt{cvmfs\_server import} works similar to \texttt{cvmfs\_server mkfs} (see \ref{sct:repocreation}) except it uses the provided data storage instead of creating a fresh (and empty) storage.
+In case of a \cvmfs\ 2.0 file storage \texttt{cvmfs\_server import} also takes care of the file catalog migration into the \cvmfs\ 2.1 schema.
+
+\subsubsection{Legacy Repository Import}
+We strongly recommend to install \cvmfs\ 2.1 on a fresh or at least a properly cleaned  machine without any traces of the \cvmfs\ 2.0 installation before installing \cvmfs\ 2.1 server tools.
+
+The command \texttt{cvmfs\_server import} requires the full \cvmfs\ 2.0 data storage which is located at /srv/cvmfs by default as well as the repository's signing keys.
+Since the \cvmfs\ 2.1 server backend supports multiple repositories in contrast to its 2.0 counterpart, we recommend to move the repository's data storage to /srv/cvmfs/<FQRN> upfront to avoid later inconsistencies.
+
+\vspace*\baselineskip
+In order to transform a repository from \cvmfs\ 2.0 into 2.1 you should roughly follow the following steps. As an example we are using a repository called \textbf{legacy.cern.ch}.
+\begin{enumerate}
+	\item Make sure that you have backups of both the repository's backend storage and its signing keys
+	\item Install and test the \cvmfs\ 2.1 server tools on the machine you are going to use as your Stratum 0 maintenance machine
+	\item Place the repository's backend storage data in /srv/cvmfs/\textit{legacy.cern.ch} \\ (default storage location)
+	\item Transfer the repository's signing keychain to the machine (f.e. to \textapprox/legacy\_keys/)
+	\item Run \texttt{cvmfs\_server import} roughly like this:
+\begin{verbatim}
+    cvmfs_server import
+      -o <username of repo maintainer> \
+      -k ~/legacy_keys \
+      -l               \ # for 2.0.x file catalog migration
+      -s               \ # for further repository statistics
+      legacy.cern.ch
+\end{verbatim}
+    \item Check the imported repository with \texttt{cvmfs\_server check legacy.cern.ch} for integrity (see \ref{sct:checkintegrity})
+\end{enumerate}
+
+
 \subsection{Customizable Actions Using Server Hooks}
 The \texttt{cvmfs\_server} utility allows release managers to trigger custom actions before and after crucial repository manipulation steps. This can be useful for example for logging purposes, establishing backend storage connections automatically or other workflow triggers, depending on the application.
 
@@ -155,6 +188,7 @@ Two named snapshots are managed automatically by \cvmfs, \texttt{trunk} and \tex
 This allows for easy unpublishing of a mistake, by rolling back to the \texttt{trunk-previous} tag.
 
 \subsection{Check Integrity}
+\label{sct:checkintegrity}
 \cvmfs\ provides an integrity checker for repositories.
 Run the integrity checker using
 \begin{verbatim}
@@ -279,4 +313,3 @@ However, all file catalogs will be recreated from scratch using the updated inte
 Note that historic file catalogs of all previous repository revisions stay untouched and are not migrated.
 
 After \texttt{cvmfs\_server migrate} has successfully updated all file catalogs repository maintenance can continue as usual.
-
