update catalog counters enumeration

--- a/cpt-details.tex
+++ b/cpt-details.tex
@@ -116,6 +116,10 @@ The following counters are maintained for both a catalog itself and for the subt
 	\item Number of symbolic links
 	\item Number of directories
 	\item Number of nested catalogs
+	\item Number of chunked files
+	\item Number of individual file chunks
+	\item Overall file content size
+	\item File content size stored in chunked files
 \end{itemize}
 
 %\subsection{$\mu$-Catalogs}
