--- a/cpt-details.tex
+++ b/cpt-details.tex
@@ -208,7 +208,7 @@ In addition, \cvmfs\ checks certificate fingerprints against the local blacklist
 The blacklisted fingerprints have to be in the same format than the fingerprints on the white-list.
 The blacklist has precedence over the white-list.
 
-As crypto engine, \cvmfs\ use \product{libcrypto} from the \product{OpenSSL} project~\cite{openssl}.
+As crypto engine, \cvmfs\ uses \product{libcrypto} from the \product{OpenSSL} project~\cite{openssl}.
 Figure~\ref{fig:security} shows the trust chain with a signed repository.
 \begin{figure}
 	\begin{center}
