adjust suunitx package usage

--- a/packages.tex
+++ b/packages.tex
@@ -26,7 +26,7 @@
 	        pdfstartview=FitH,
 	        pdfborder={0 0 0}}
 \usepackage{url}
-\usepackage[per-mode=symbol,bracket-unit-denominator=false,detect-all,load-configurations=binary]{siunitx}
+\usepackage[per-mode=symbol,bracket-unit-denominator=false,detect-all,load-configurations=binary,binary-units]{siunitx}
 \DeclareSIUnit\loc{LOC}
 \DeclareSIUnit\permil{\textperthousand}
 
